# tripleo-validations

./: .ansible-lint  .coveragerc  .dockerignore  .gitignore  .gitreview  .pre-commit-config.yaml  .stestr.conf  .yamllint  .zuul.yaml  CONTRIBUTING.rst  HACKING.rst  README.rst  ansible-collections-requirements.yml  ansible-test-env.rc  ansible.cfg  bindep.txt  generate_validation_list.py  groups.yaml  hosts.sample  lower-constraints.txt  molecule-requirements.txt  requirements.txt  role-addition.yml  setup.cfg  test-requirements.txt  tox.ini
.ansible-lint_rules/: ValidationHasMetadataRule.py
.config/molecule/: Dockerfile  config.yml
_skeleton_role_/defaults/: main.yml.j2
_skeleton_role_/tasks/: main.yml.j2
_skeleton_role_/vars/: main.yml.j2
callback_plugins/: validation_json.py  validation_output.py
ci/playbooks/: coverchange.yaml  pre.yml  run.yml
doc/: requirements.txt
doc/source/: conf.py  groups.rst  index.rst  installation.rst  modules.rst  readme.rst  roles.rst  usage.rst
lookup_plugins/: glance_images.py  ironic_nodes.py  nova_flavors.py  nova_hypervisor_statistics.py  nova_servers.py  roles_info.py  stack_resources.py  tht.py
playbooks/: 512e.yaml  ceilometerdb-size.yaml  ceph-ansible-installed.yaml  ceph-dependencies-installed.yaml  ceph-health.yaml  ceph-pg.yaml  check-for-dangling-images.yaml  check-ftype.yaml  check-kernel-version.yaml  check-latest-minor-version.yaml  check-latest-packages-version.yaml  check-manila-policy-file.yaml  check-network-gateway.yaml  check-ntp-reachability.yaml  check-reboot.yaml  check-rhsm-version.yaml  check-uc-hostname.yaml  check-undercloud-conf.yaml  collect-flavors-and-verify-profiles.yaml  compute-tsx.yaml  container-status.yaml  containerized-undercloud-docker.yaml  controller-token.yaml  controller-ulimits.yaml  ctlplane-ip-range.yaml  default-node-count.yaml  deployment-images.yaml  deprecated-services.yaml  dhcp-introspection.yaml  dhcp-provisioning.yaml  dns.yaml  fips-enabled.yaml  frr-status.yaml  haproxy.yaml  healthcheck-service-status.yaml  image-serve.yaml  ironic-boot-configuration.yaml  mysql-open-files-limit.yaml  network-environment.yaml  neutron-sanity-check.yaml  (+50 more)
releasenotes/notes/: add-ceph-health-check-000bab9581c759d3.yaml  add-overcloud-service-status-128bf74993d035fa.yaml  add-selinux-validation-e23694aaf94d2a66.yaml  add-undercloud-service-check-fe0ac64b9608f2da.yaml  add-warn-helper-a586ba13c7e8b43b.yaml  add_a_lookup_plugin_for_nova_servers-33a934236e6652fb.yaml  add_nova_event_callback_validation-bd966e11a459d638.yaml  bug-1776721-2e0abe371abee71c.yaml  ceilometerdb-size-validation-removal-a5c42940eac102df.yaml  ceilometerdb-size_deprecation-c4b7e28bdfa5862d.yaml  check-latest-minor-version-14befc616a59002b.yaml  check-repo-availability-ef1bdd45586929f7.yaml  (+30 more)
scripts/: bindep-install  run-local-test  run-validations.sh  tripleo-ansible-inventory  tripleo-validation.py
tests/: conftest.py  hosts.ini  prepare-test-host.yml  test_molecule.py  test_tripleo_validator.py
tools/: ansible-lint.sh  validate-files.py
tripleo_validations/: __init__.py  constants.py  inventory.py  plugin.py  tripleo_validator.py  utils.py
validations/: 512e.yaml  ceilometerdb-size.yaml  ceph-ansible-installed.yaml  ceph-dependencies-installed.yaml  ceph-health.yaml  check-ftype.yaml  check-latest-minor-version.yaml  check-network-gateway.yaml  check-repo-availability.yaml  check-underscores-in-stack-name.yaml  collect-flavors-and-verify-profiles.yaml  collect-flavors.yaml  containerized-undercloud-docker.yaml  controller-token.yaml  controller-ulimits.yaml  ctlplane-ip-range.yaml  default-node-count.yaml  deployment-images.yaml  dhcp-introspection.yaml  dhcp-provisioning.yaml  dns.yaml  haproxy.yaml  ironic-boot-configuration.yaml  mysql-open-files-limit.yaml  network-environment.yaml  neutron-sanity-check.yaml  no-op-firewall-nova-driver.yaml  node-disks.yaml  node-health.yaml  nova-event-callback.yaml  ntpstat.yaml  openshift-hw-requirements.yaml  openshift-nw-requirements.yaml  openstack-endpoints.yaml  ovs-dpdk-pmd-cpus-check.yaml  pacemaker-status.yaml  rabbitmq-limits.yaml  repos.yaml  stack-health.yaml  stonith-exists.yaml  (+12 more)
zuul.d/: base.yaml  layout.yaml  molecule.yaml
(+697 files in other folders)
