[metadata]
name = tripleo-validations
summary = A collection of Ansible playbooks to detect and report potential issues during TripleO deployments
description_file =
    README.rst
author = OpenStack
author_email = openstack-discuss@lists.openstack.org
home_page = https://docs.openstack.org/tripleo-validations/latest/
python_requires = >=3.6
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[files]
packages =
    tripleo_validations

scripts =
    scripts/tripleo-ansible-inventory

data_files =
    share/ansible = hosts.sample
    share/ansible = groups.yaml
    share/ansible/roles = roles/*
    share/ansible/validation-playbooks = playbooks/*
    share/ansible/callback_plugins = callback_plugins/*
    share/ansible/lookup_plugins = lookup_plugins/*
    share/ansible/library = library/*
