[metadata]
name = tripleo-validations
summary = A collection of Ansible playbooks to detect and report potential issues during TripleO deployments
long_description = file: README.rst
long_description_content_type = text/x-rst
author = OpenStack
author_email = openstack-discuss@lists.openstack.org
home_page = https://docs.openstack.org/tripleo-validations/latest/
classifier =
    Development Status :: 5 - Production/Stable
    Environment :: OpenStack
    Framework :: Ansible
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8

[options]
python_requires = >=3.8

[files]
packages =
    tripleo_validations

scripts =
    scripts/tripleo-ansible-inventory

data_files =
    share/ansible = hosts.sample
    share/ansible = groups.yaml
    share/ansible/roles = roles/*
    share/ansible/validation-playbooks = playbooks/*
    share/ansible/callback_plugins = callback_plugins/*
    share/ansible/lookup_plugins = lookup_plugins/*
    share/ansible/library = library/*
